# Drug-recommendation-system

./: .gitignore  README.md  medicine-recommend.ipynb  medicine_dict.pkl  pyproject.toml  requirements.txt  test2.py  test3.py
css/: style.css
templates/: gov-policies.html  index.html
